parametrize max num books

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ PROMPT=You will receive a image of a book front view in a book shelf. Extract th
 YOLO_MODEL_PATH=yolov10x.pt
 BOOK_CLASS_INDEX=73
 SAM_MODEL_PATH=sam2.1_b.pt
+ABORT_BOOK_COUNT=30
