--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     container_name: bookhawk
     ports:
       - "8082:8082"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     restart: always
     volumes:
       - .:/app  # Optional: allows live code updates during development
