updated env to relfect new sam model

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MODEL=qwen2.5vl:7b
 PROMPT=You will receive a image of a book front view in a book shelf. Extract the author and title of the book image. Return the output as JSON. Output the JSON as {'author': .. , 'title': .., 'language': ..}. Do not mistake the genre or publisher as the author. If you cannot extract the author from the image, output the author that has published the book that you know of.
 YOLO_MODEL_PATH=yolov10x.pt
 BOOK_CLASS_INDEX=73
-SAM_MODEL_PATH=sam2.1_b.pt
+SAM_MODEL_PATH=sam_vit_b_01ec64.pth
 ABORT_BOOK_COUNT=30
